# dolphinscheduler-mcp

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  ds-restfuleapi-v1.json  example_mcp.py  install_dev.sh  pyproject.toml  requirements-dev.txt  run.bat  run.py  run.sh  test_create_project.py  test_env_settings.py
docs/: api.md  installation.md
examples/: list_projects.py  manage_resources.py  simple_client.py  start_workflow.py
mcp-openapi-split/base/: 01_base.json
mcp-openapi-split/paths/: 01_azure_datafactory_api.json  02_DYNAMIC_TASK_TYPE.json  03_kubernetes_namespace_api.json  04_project_worker_group_api.json  05_UI______.json  06_worker_group_api.json  07_project_preference_api.json  08_task_definition_api.json  09_________.json  10___________.json  11________.json  12_favourite_api.json  13_alert_plugin_instance_api.json  14_alert_group_api.json  15_schedule_api.json  16___________.json  17_process_task_relation_api.json  18__________.json  19_datasource_api.json  20_data_quality_api.json  21_______.json  22_________.json  23_________.json  24_process_execution_api.json  25_environment_api.json  26_________.json  27_user_api.json  28_monitor_api.json  29_tenant_api.json  30_token_api.json  31_resource_api.json  32_______.json  33_cluster_api.json  34_project_parameter_api.json  35_project_api.json
mcp-openapi-split/schemas/: 01_alert_schemas.json  02_cluster_schemas.json  03_datasource_schemas.json  04_environment_schemas.json  07_queue_schemas.json  (+20 more)
src/: __init__.py
tests/: __init__.py  test_config.py
(+46 files in other folders)
